typescript/checker/tests/errors/copied/var-assignment/index.ts.stderr
error: RedclaredVarWithDifferentType {
    span: Span {
        lo: BytePos(
            25,
        ),
        hi: BytePos(
            28,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/errors/copied/var-assignment/index.ts:2:5
  |
2 | var as1: number;
  |     ^^^

